fix: css fix for overflowing <p> tag

--- a/src/styling/PortalAppointments.scss
+++ b/src/styling/PortalAppointments.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
     font-family: 'Montserrat', sans-serif;
     #yourNextApptIs {
         font-family: 'Titan One', sans-serif;
@@ -46,5 +47,6 @@
         margin: 12px 40px;
         font-size: 11px;
         font-style: italic;
+        max-width: 30vw;
     }
 }
