--- a/src/styling/UserPortal.scss
+++ b/src/styling/UserPortal.scss
@@ -3,13 +3,17 @@
 #userPortalOuterDiv {
     background-color: $offwhite;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-grow: 2;
     
 }
 #deleteAccountDiv {
     font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     Button {
         background-color: $light-green;
         border: 2px solid $dark-green;
@@ -18,11 +22,13 @@
         font-weight: bolder;
         padding: 5px 10px;
         font-family: 'Montserrat', sans-serif;
+        width: 180px;
     }
     p {
         font-size: 11px;
         font-style: italic;
         padding: 10px 20px;
+        max-width: 30vw;
     }
 }
 
@@ -33,8 +39,8 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        padding-left: 5vw;
-        flex: 1;
+        padding-left: 2vw;
+        flex: 2;
         width: 45vw;
         height: 500px;
     
